# cookiecutter-minimal-python

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.id}}/: pyproject.toml
