[tool.poetry]
name = "cookiecutter_poetry"
version = "0.1.0"
description = ""
keywords = [""]
authors = [""]
license = "MIT"
repository = ""
homepage = ""
readme = "README.pypi.md"
classifiers = [
    ""
]
include = [
    "LICENSE",
]
packages = [{include = "cookiecutter_poetry"}]

[tool.poetry.urls]
"Changelog" = ""
"Issue Tracker" = ""
"LinkedIn" = ""
"Twitter" = ""

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
cookiecutter_poetry = "cookiecutter_poetry.main:main"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.0"
ruff = "^0.0.246"

[tool.black]
line-length = 79
preview = true
include = '\.pyi?$'
extend-exclude = """
(
    ^/.venv/*
    ^/dist/*
)
"""

[tool.ruff]
src = ["cookiecutter_poetry", "tests"]

[tool.ruff.isort]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
no_lines_before = ["LOCALFOLDER", "FIRSTPARTY"]
known_first_party= ["cookiecutter_poetry"]
known_local_folder = ["cookiecutter_poetry"]

[tool.mypy]
files = [
  "cookiecutter_poetry",
  "scripts",
  "tests"
]
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
